fixed overflow-x problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1281,6 +1281,10 @@ nav {
      overflow-x: hidden;
   }
 } 
-
+body{
+     width:100%;
+     height:100%;
+     overflow-x: hidden;
+ }
 
 
